Fixed login visual issues on small screens (1366x768px)

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -106,8 +106,9 @@ margin-bottom: 3%;
   display: block;
   height: 15vh;
   text-align: center;
+  font-size: 1.2em;
     .alert {
-      font-size: 1.1em;
+      font-size: 0.8em;
     }
     }
   }
